syntax = "proto3";

option java_multiple_files = true;
option java_package = "service";
option java_outer_classname = "LibraryProto";

package services;

service LibraryService {
  rpc AddBook (AddBookRequest) returns (AddBookResponse) {}
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse) {}
}

message AddBookRequest {
  string title = 1;
  string author = 2;
  int32 year = 3;
}

message AddBookResponse {
  bool success = 1;
  string message = 2;
}

message ListBooksRequest {}

message ListBooksResponse {
  repeated Book books = 1;
}

message Book {
  string title = 1;
  string author = 2;
  int32 year = 3;
}